# tensorpandas

./: Examples.ipynb  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: actions.yml
tensorpandas/: __init__.py  _patch.py  _patch_1_1.py  _patch_1_2.py  _patch_1_3.py  _patch_1_4_and_1_5.py  base.py
tests/: _test_extension.py  conftest.py  test_basic.py  test_dt_types.py  test_dtype.py  test_extension.py  test_parquet.py
