[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "tensorpandas"
version = "0.0.0.dev0"
description = "Tensor Extension Types for pandas and pyarrow."
readme = "README.md"
authors = ["Igor Gotlibovych <igor@octopus.energy>"]
homepage = "https://github.com/octoenergy/tensorpandas"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
pyarrow = "^0.16.0"

[tool.poetry.dev-dependencies]
isort = "^4.3"
black = "^19.10b0"
flake8 = "^3.7"
pydocstyle = "^4.0"
mypy = "^0.761.0"
pytest = "^5.3"
moto = "^1.3.14"

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
skip=".git, .pytest_cache, .mypy_cache, .tox, .venv, build, dist"

[tool.black]
line-length = 99
skip-numeric-underscore-normalization = "True"
target_version = ['py37']
include = '\.pyi?$'
exclude = '(\.git|\.pytest_cache|\.mypy_cache|\.tox|\.venv|build|dist|docs)'

[tool.dephell.main]
# read from poetry format
from = {format = "poetry", path = "pyproject.toml"}
# and convert into setup.py
to = {format = "setuppy", path = "setup.py"}
